# ot-harjoitustyo2022

./: .env  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: config.py  index.py
src/entities/: course.py  student.py  user.py
src/repositories/: course_repository.py  student_repository.py
src/services/: course_service.py
src/tests/: course_repository_test.py  course_service_test.py
src/ui/: course_view.py  student_view.py  ui.py
